jenkins-helm/templates/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: my-jenkins
spec:
  ingressClassName: nginx
  rules:
  - host:
    http:
      paths:
      - path: /jenkins
        pathType: Prefix
        backend:
          service:
            name: jenkins-svc
            port:
              number: 8080
